--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "firebase": "^8.2.9",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
